--- a/system_user_cms/user_header.html
+++ b/system_user_cms/user_header.html
@@ -38,16 +38,19 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="user_content.html" style="color: white;">Contents</a>
+                            <a class="nav-link" href="user_content.html" style="color: white;">商品一覧</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="user_assign_page.html" style="color: white;">Assign Page</a>
+                            <a class="nav-link" href="user_assign_page.html" style="color: white;">ページ設定</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="user_manage.html" style="color: white;">Users</a>
+                            <a class="nav-link" href="user_content_change_status.html" style="color: white;">ステータス変更</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="user_setting.html" style="color: white;">Settings</a>
+                            <a class="nav-link" href="user_request_images.html" style="color: white;">画像リクエスト</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link" href="user_supplier.html" style="color: white;">商社一覧</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html" style="color: white;">
