--- a/user_site/site_header.html
+++ b/user_site/site_header.html
@@ -38,10 +38,14 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="site_content.html" style="color: white;">Contents</a>
+                            <a class="nav-link" href="site_content.html" style="color: white;">商品一覧</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="site_user_manage.html" style="color: white;">Users</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="site_content_register.html" style="color: white;">新規商品登録</a>
+                        </li>
+                        </li>
+                            <a class="nav-link" href="site_content_bulk_register.html" style="color: white;">商品一括登録</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="site_company.html" style="color: white;">商社情報</a>
