--- a/system_provider_cms/provider_dashboard.html
+++ b/system_provider_cms/provider_dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,125 +17,29 @@
 
     <!-- コンテンツエリア -->
     <div class="container mt-4 mx-auto" style="max-width: 1200px;">
-        <h2>Dashboard</h2>
+        <div class="row justify-content-center mt-5">
+            <!-- 商品一覧ボタン -->
+            <div class="col-md-5 mb-4">
+                <div class="card text-center p-5 custom-card product-card">
+                    <a href="provider_content_manage.html" class="stretched-link" style="text-decoration: none;">
+                        <h2 style="font-size: 30px; color: aliceblue;">商品一覧</h2>
+                    </a>
+                </div>
+            </div>
 
-        <!-- 登録商品数表示テーブル -->
-        <h6 class="mt-4">登録商品数表示</h6>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th><strong><small>サプライヤー総数</strong></small></th>
-                    <th><strong><small>商品総数</strong></small></th>
-                    <th><strong><small>新規登録数</strong></small></th>
-                    <th><strong><small>継続登録数</strong></small></th>
-                    <th><strong><small>１次選定中</strong></small></th>
-                    <th><strong><small>１次選定完了</strong></small></th>
-                    <th><strong><small>２次選定中</strong></small></th>
-                    <th><strong><small>２次選定完了</strong></small></th>
-                    <th><strong><small>保留</strong></small></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><small id="totalCount">33</small></td>
-                    <td><small id="totalCount">150</small></td>
-                    <td><small id="newCount">60</small></td>
-                    <td><small id="continuingCount">90</small></td>
-                    <td><small id="firstSelectionPending">30</small></td>
-                    <td><small id="firstSelectionComplete">20</small></td>
-                    <td><small id="secondSelectionPending">40</small></td>
-                    <td><small id="secondSelectionComplete">45</small></td>
-                    <td><small id="onHold">5</small></td>
-                </tr>
-            </tbody>
-        </table>
-
-        <!-- 最近のアクティビティ -->
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">最近のアクティビティ</h4>
-        
-                <!-- アクティビティテーブル -->
-                <table class="table table-sm">
-                    <thead>
-                        <tr>
-                            <th scope="col">日付時間</th>
-                            <th scope="col">担当者名</th>
-                            <th scope="col">アクティビティ</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>2024-09-01 10:33</td>
-                            <td>Admin1</td>
-                            <td>商品削除しました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-09-01 09:45</td>
-                            <td>Admin2</td>
-                            <td>ログインしました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-31 16:22</td>
-                            <td>ClientA</td>
-                            <td>CSVダウンロードしました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-31 15:10</td>
-                            <td>Admin1</td>
-                            <td>商品登録しました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-30 12:45</td>
-                            <td>ClientB</td>
-                            <td>アクセスしました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-30 11:20</td>
-                            <td>Admin3</td>
-                            <td>ユーザー追加しました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-29 14:05</td>
-                            <td>ClientC</td>
-                            <td>PDFダウンロードしました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-29 09:15</td>
-                            <td>Admin2</td>
-                            <td>商品削除しました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-28 18:30</td>
-                            <td>ClientD</td>
-                            <td>ログインしました</td>
-                        </tr>
-                        <tr>
-                            <td>2024-08-28 08:40</td>
-                            <td>Admin1</td>
-                            <td>アクセスしました</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <!-- 商社一覧ボタン -->
+            <div class="col-md-5 mb-4">
+                <div class="card text-center p-5 custom-card supplier-card">
+                    <a href="provider_supplier.html" class="stretched-link" style="text-decoration: none;">
+                        <h2 style="font-size: 30px; color: aliceblue;">商社一覧</h2>
+                    </a>
+                </div>
             </div>
         </div>
-            <!-- ページネーション -->
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
-        </div>
+
         <a href="../index.html" class="btn btn-link mt-4">Demo Entry</a>
     </div>
+
     <!-- フッターの読み込み -->
     <div id="footer-container"></div>
 
@@ -166,7 +70,6 @@
         document.addEventListener('DOMContentLoaded', () => {
             applyCustomSettings();
         });
-
     </script>
 </body>
 </html>
