--- a/system_provider_cms/provider_header.html
+++ b/system_provider_cms/provider_header.html
@@ -41,10 +41,7 @@
                             <a class="nav-link" href="provider_content_manage.html" style="color: white;">Contents</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="provider_setting.html" style="color: white;">Settings</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="provider_user_manage.html" style="color: white;">Users</a>
+                            <a class="nav-link" href="provider_supplier.html" style="color: white;">supplier</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html" style="color: white;">
