--- a/system_user_cms/user_content.html
+++ b/system_user_cms/user_content.html
@@ -102,16 +102,15 @@
                 <div class="d-flex align-items-center">
                     <label for="rowsPerPage" class="form-label me-2 mb-0">表示行数</label>
                     <select class="form-select form-select-sm" id="rowsPerPage" style="width: auto;">
-                        <option value="10" selected>10</option>
-                        <option value="30">30</option>
+                        <option value="30" selected>30</option>
                         <option value="50">50</option>
+                        <option value="100">100</option>
+                        <option value="all">all</option>
                     </select>
                 </div>
                 <div class="ms-auto">
-                    <button class="btn btn-outline-primary btn-sm me-2">Download PDF</button>
+                    <button class="btn btn-outline-primary btn-sm me-2">Proposal PDF</button>
                     <button class="btn btn-outline-secondary btn-sm">Download CSV</button>
-                    <button class="btn btn-primary btn-sm me-2" onclick="showRequestPopup()">画像リクエスト</button>
-                    <button class="btn btn-danger btn-sm me-2" onclick="showDeleteConfirmation()">一括ステータス変更</button>
                 </div>
                 
                 <!-- ポップアップの構造 -->
