--- a/user_site/site_content.html
+++ b/user_site/site_content.html
@@ -102,17 +102,17 @@
                 <div class="d-flex align-items-center">
                     <label for="rowsPerPage" class="form-label me-2 mb-0">表示行数</label>
                     <select class="form-select form-select-sm" id="rowsPerPage" style="width: auto;">
-                        <option value="10" selected>10</option>
-                        <option value="30">30</option>
+                        <option value="30" selected>30</option>
                         <option value="50">50</option>
+                        <option value="100">100</option>
+                        <option value="all">all</option>
                     </select>
                 </div>
                 <div class="ms-auto">
-                    <button class="btn btn-outline-primary btn-sm me-2">Download PDF</button>
+                    <button class="btn btn-outline-primary btn-sm me-2">Proposal PDF</button>
                     <button class="btn btn-outline-secondary btn-sm">Download CSV</button>
-                    <button class="btn btn-outline-info btn-sm">提案書出力</button>
                     <button class="btn btn-primary btn-sm me-2" onclick="location.href='site_content_register.html'">新規商品登録</button>
-                    <button class="btn btn-danger btn-sm me-2" onclick="location.href='site_content_register_all.html'">一括商品登録</button>
+                    <button class="btn btn-danger btn-sm me-2" onclick="location.href='site_content_bulk_register.html'">一括商品登録</button>
                 </div>
                 
                 <!-- ポップアップの構造 -->
