--- a/user_site/site_content_register.html
+++ b/user_site/site_content_register.html
@@ -17,7 +17,29 @@
 
     <!-- コンテンツエリア -->
     <div class="container mt-4">
-        <h2>サプライヤーA 商品登録</h2>
+        <h2>商品登録</h2>
+        <div class="row">
+            <!-- プルダウン -->
+            <div class="col-md-5 me-2">
+                <p>登録済み商品から登録</p>
+                <select class="form-select form-select-sm" aria-label="登録済み商品から登録" style="max-width: 400px;">
+                    <option value="1">商品A</option>
+                    <option value="2">商品B</option>
+                    <option value="3">商品C</option>
+                    <option value="4">商品D</option>
+                    <option value="5">商品E</option>
+                </select>
+            </div>
+            
+            <!-- 検索窓 -->
+            <div class="col-md-5 me-2">
+                <p>&nbsp;</p> <!-- 上のプルダウンとの高さを揃えるためのスペーサー -->
+                <div class="input-group" style="max-width: 400px;">
+                    <input type="text" class="form-control form-control-sm" placeholder="登録済み商品を探す" aria-label="Search Contents" aria-describedby="button-search">
+                    <button class="btn btn-primary btn-sm" type="button" id="button-search">Search</button>
+                </div>
+            </div>
+        </div>
         
         <!-- 基本情報セクション -->
         <div class="card mb-4">
