--- a/system_provider_cms/provider_dashboard.html
+++ b/system_provider_cms/provider_dashboard.html
@@ -22,7 +22,7 @@
             <div class="col-md-5 mb-4">
                 <div class="card text-center p-5 custom-card product-card">
                     <a href="provider_content_manage.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 30px; color: aliceblue;">商品一覧</h2>
+                        <h2 style="font-size: 30px; color: black;">商品一覧</h2>
                     </a>
                 </div>
             </div>
@@ -31,7 +31,7 @@
             <div class="col-md-5 mb-4">
                 <div class="card text-center p-5 custom-card supplier-card">
                     <a href="provider_supplier.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 30px; color: aliceblue;">商社一覧</h2>
+                        <h2 style="font-size: 30px; color: black;">商社一覧</h2>
                     </a>
                 </div>
             </div>
