--- a/system_user_cms/user_dashboard.html
+++ b/system_user_cms/user_dashboard.html
@@ -53,26 +53,26 @@
         <div class="row justify-content-center mt-5">
             <!-- 商品一覧ボタン -->
             <div class="col-md-3 mb-4">
-                <div class="card text-center p-5 custom-card product-card">
+                <div class="card text-center p-5 custom-card">
                     <a href="user_content.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 25px; color: aliceblue;">商品一覧</h2>
+                        <h2 style="font-size: 25px; color: black;">商品一覧</h2>
                     </a>
                 </div>
             </div>
     
             <!-- 商品新規登録 -->
             <div class="col-md-3 mb-4">
-                <div class="card text-center p-5 custom-card supplier-card">
+                <div class="card text-center p-5 custom-card">
                     <a href="user_assign_page.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 25px; color: aliceblue;">ページ設定</h2>
+                        <h2 style="font-size: 25px; color: black;">ページ設定</h2>
                     </a>
                 </div>
             </div>
             <!-- 商品一括登録 -->
             <div class="col-md-3 mb-4">
-                <div class="card text-center p-5 custom-card bulk-card">
+                <div class="card text-center p-5 custom-card">
                     <a href="site_content_bulk_register.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 25px; color: aliceblue;">ステータス変更</h2>
+                        <h2 style="font-size: 25px; color: black;">ステータス変更</h2>
                     </a>
                 </div>
             </div>
@@ -80,18 +80,18 @@
         <div class="row justify-content-center mt-5">
             <!-- 商品一覧ボタン -->
             <div class="col-md-3 mb-4">
-                <div class="card text-center p-5 custom-card request-card">
+                <div class="card text-center p-5 custom-card">
                     <a href="user_request_image.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 25px; color: aliceblue;">画像リクエスト</h2>
+                        <h2 style="font-size: 25px; color: black;">画像リクエスト</h2>
                     </a>
                 </div>
             </div>
     
             <!-- 商品新規登録 -->
             <div class="col-md-3 mb-4">
-                <div class="card text-center p-5 custom-card page-card">
+                <div class="card text-center p-5 custom-card">
                     <a href="user_supplier.html" class="stretched-link" style="text-decoration: none;">
-                        <h2 style="font-size: 25px; color: aliceblue;">商社一覧</h2>
+                        <h2 style="font-size: 25px; color: black;">商社一覧</h2>
                     </a>
                 </div>
             </div>
