--- a/user_site/site_dashboard.html
+++ b/user_site/site_dashboard.html
@@ -20,26 +20,26 @@
     <div class="row justify-content-center mt-5">
         <!-- 商品一覧ボタン -->
         <div class="col-md-3 mb-4">
-            <div class="card text-center p-5 custom-card product-card">
+            <div class="card text-center p-5 custom-card">
                 <a href="site_content.html" class="stretched-link" style="text-decoration: none;">
-                    <h2 style="font-size: 25px; color: aliceblue;">商品一覧</h2>
+                    <h2 style="font-size: 25px; color: black;">商品一覧</h2>
                 </a>
             </div>
         </div>
 
         <!-- 商品新規登録 -->
         <div class="col-md-3 mb-4">
-            <div class="card text-center p-5 custom-card supplier-card">
+            <div class="card text-center p-5 custom-card">
                 <a href="site_content_register.html" class="stretched-link" style="text-decoration: none;">
-                    <h2 style="font-size: 25px; color: aliceblue;">商品新規登録</h2>
+                    <h2 style="font-size: 25px; color: black;">商品新規登録</h2>
                 </a>
             </div>
         </div>
         <!-- 商品一括登録 -->
         <div class="col-md-3 mb-4">
-            <div class="card text-center p-5 custom-card bulk-card">
+            <div class="card text-center p-5 custom-card">
                 <a href="site_content_bulk_register.html" class="stretched-link" style="text-decoration: none;">
-                    <h2 style="font-size: 25px; color: aliceblue;">商品一括登録</h2>
+                    <h2 style="font-size: 25px; color: black;">商品一括登録</h2>
                 </a>
             </div>
         </div>
