user dashboardのリンク修正

--- a/system_user_cms/user_dashboard.html
+++ b/system_user_cms/user_dashboard.html
@@ -71,7 +71,7 @@
             <!-- 商品一括登録 -->
             <div class="col-md-3 mb-4">
                 <div class="card text-center p-5 custom-card">
-                    <a href="site_content_bulk_register.html" class="stretched-link" style="text-decoration: none;">
+                    <a href="user_content_change_status.html" class="stretched-link" style="text-decoration: none;">
                         <h2 style="font-size: 25px; color: black;">ステータス変更</h2>
                     </a>
                 </div>
@@ -81,7 +81,7 @@
             <!-- 商品一覧ボタン -->
             <div class="col-md-3 mb-4">
                 <div class="card text-center p-5 custom-card">
-                    <a href="user_request_image.html" class="stretched-link" style="text-decoration: none;">
+                    <a href="user_request_images.html" class="stretched-link" style="text-decoration: none;">
                         <h2 style="font-size: 25px; color: black;">画像リクエスト</h2>
                     </a>
                 </div>
